--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "^7.0.2",
+    "@mui/icons-material": "^7.3.1",
+    "@mui/lab": "^7.0.0-beta.16",
     "@mui/material": "^7.1.0",
     "@mui/system": "^7.1.0",
     "@react-google-maps/api": "^2.20.6",
+    "framer-motion": "^12.23.12",
     "next": "15.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
