--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.28.3",
+    "@babel/preset-react": "^7.27.1",
     "@eslint/eslintrc": "^3",
-    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
+    "babel-jest": "^30.1.1",
     "eslint": "^9",
     "eslint-config-next": "15.3.0",
     "jest": "^30.0.4",
